# wondernest

./: .gitignore  CLAUDE.md  DRAWING_FIX_SUMMARY.md  FEATURE_DEVELOPMENT_STANDARDS.md  README.md  STICKER_BOOK_ALIGNED_PLAN.md  backend_parity_todos.md  pubspec.yaml  release_todo.md  test_integration.md  test_sync.md
WonderNestRustBackend/: .env.example  .gitignore  AGENT_CONTEXT.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  Justfile  MIGRATION_AGENT_PROMPT.md  Makefile  PRODUCTION_READINESS.md  README.md  SCRIPTS_SETUP.md  TESTING_AGENT_PROMPT.md  TESTING_PROMPT.md  TEST_COVERAGE_REPORT.md  TEST_README.md  TEST_SETUP_FIXED.md  TEST_SUMMARY.md  convert_sqlx_queries.sh  docker-compose.prod.yml  docker-compose.yml  docker-logs.sh  docker-status.sh  fix_all_handlers.sh  fix_all_test_issues.sh  fix_analytics_handlers.sh  fix_apperror.sh  fix_auth_else_clauses.sh  fix_duplicate_imports.sh  fix_file_upload.sh  fix_handlers.sh  fix_remaining_issues.sh  fix_sqlx_binding.sh  fix_test_assertions.sh  generate_hash.rs  test-auth-rust.sh  test-auth.sh  test-compilation.sh  test_auth.sh  test_create_child.sh  (+4 more)
WonderNestRustBackend/.claude/agents/: rust-migration-architect.md  wondernest-fullstack-specialist.md  wondernest-test-guardian.md
WonderNestRustBackend/.github/workflows/: tests.yml
WonderNestRustBackend/scripts/: README.md  quick-rebuild.sh  rebuild-docker.sh  restart-docker.sh  run_all_tests.sh  run_tests.sh  test_quick.sh  test_simple.sh
WonderNestRustBackend/src/: config.rs  error.rs  lib.rs  main.rs
WonderNestRustBackend/src/db/: admin_repository.rs  content_publishing_repository.rs  marketplace_repository.rs  mod.rs  user_repository.rs
WonderNestRustBackend/src/extractors/: mod.rs
WonderNestRustBackend/src/middleware/: admin_auth.rs  auth.rs  creator_auth.rs  mod.rs
WonderNestRustBackend/src/models/: admin.rs  admin_content.rs  analytics.rs  audio.rs  auth.rs  content.rs  content_ecosystem.rs  content_pack.rs  content_publishing.rs  coppa.rs  creator.rs  family.rs  file_operations.rs  file_upload.rs  game.rs  marketplace.rs  mod.rs  user.rs
WonderNestRustBackend/src/routes/: health.rs  mod.rs
WonderNestRustBackend/src/services/: admin_auth_service.rs  admin_content_service.rs  admin_content_service_simple.rs  admin_jwt.rs  auth.rs  jwt.rs  (+18 more)
WonderNestRustBackend/tests/: lib.rs
(+794 files in other folders)
