[package]
name = "wondernest-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework - Using Axum for better async support and simpler API
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database - Using SQLx for compile-time checked queries
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT
jsonwebtoken = "9.2"

# Password hashing
bcrypt = "0.15"
sha2 = "0.10"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenv = "0.15"
config = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# File uploads
multer = "3.0"

# AWS S3
aws-sdk-s3 = "1.13"
aws-config = "1.1"

# Request ID
tower-request-id = "0.3"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
rstest = "0.18"
axum-test = "14.0"

# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }

# Assertion helpers
pretty_assertions = "1.4"
assert_matches = "1.5"

# Mock data generation
fake = { version = "2.9", features = ["derive", "chrono", "uuid", "http"] }
rand = "0.8"

# Test database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono", "migrate", "sqlite"] }

# Environment for testing
dotenvy = "0.15"
tempfile = "3.8"

# Code coverage
cargo-tarpaulin = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true